Finish admin budget jar

--- a/src/Web.WebApp/Pages/Account/ConfirmEmail.razor
+++ b/src/Web.WebApp/Pages/Account/ConfirmEmail.razor
@@ -16,7 +16,7 @@
         {
             if (IsConfirmed)
             {
-                <div>Thank you. Your email has been successfully verified. <a href="/account/login">Click here to log in</a>.</div>
+                <div>Thank you! Your email has been successfully verified. <a href="/account/login">Click here to log in</a>.</div>
             } else
             {
                 <div>Sorry, we cannot verify your email or the verification link is expired.</div>
