--- a/src/Web.WebApp/Pages/Account/RegisterVerify.razor
+++ b/src/Web.WebApp/Pages/Account/RegisterVerify.razor
@@ -14,8 +14,11 @@
         <h5>Email Confirmation</h5>
         <hr />
         <p>
-            Your account has been created. Now let's verify your email address.<br />
-            Please check your inbox or spam folder, and click on the verification link in the email sent to <b>@Email</b>.
+            <b>Thank you for your registration.</b>
+        </p>
+        <p>
+            <b>Please confirm and active your account.</b><br />
+            Check your inbox or spam folder, and click on the verification link in the email we've sent to <b>@Email</b>.
         </p>
         <p>
             Haven't received it? <a href="/account/generateemailconfirmation?email=@Email">Click here</a> to resend the email.
