--- a/src/Web.WebApp/Pages/Page.razor
+++ b/src/Web.WebApp/Pages/Page.razor
@@ -1,4 +1,5 @@
 ﻿@page "/page/{PageName}"
+@attribute [AllowAnonymous]
 @using Core.Application.Models
 @using Core.Application.Services.IServices
 @using System.Web
