--- a/src/Web.WebApp/Shared/PageFooter.razor
+++ b/src/Web.WebApp/Shared/PageFooter.razor
@@ -1,8 +1,8 @@
 ﻿<div class="page-footer">
     <div class="page-footer-left">
-        <a href="/terms" target="_blank">Terms of service</a>
+        <a href="./page/term" target="_blank">Terms of service</a>
         <span class="px-3" />
-        <a href="/privacy" target="_blank">Privacy Policy</a>
+        <a href="./page/privacy" target="_blank">Privacy Policy</a>
     </div>
     <div class="page-footer-right">
         <a href="https://apprector.com" target="_blank">&copy; @year App Rector</a>
