--- a/src/Web.WebApp/Pages/Account/Register.razor
+++ b/src/Web.WebApp/Pages/Account/Register.razor
@@ -37,7 +37,8 @@
                 <MudTextField Label="Confirm Password" @bind-Value="@Input.ConfirmPassword" For="@(() => Input.ConfirmPassword)" InputType="InputType.Password"  Class="mb-3"/>
                 
                 <div class="mb-3">
-                    By creating an account, you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.
+                    By creating an account, you agree to our <a href="./page/term" target="_blank">Terms of Service</a> and 
+                    <a href="./page/privacy" target="_blank">Privacy Policy</a>.
                 </div>
 
                 <div class="mb-3">
