--- a/src/Web.WebApp/Shared/NavMenu.razor
+++ b/src/Web.WebApp/Shared/NavMenu.razor
@@ -7,7 +7,7 @@
                 <MudNavLink Href="/admin/users" IconColor="@Color.Primary" Icon="@Icons.Filled.People">
                     Users
                 </MudNavLink>
-                <MudNavLink Href="/admin/budgetjars" IconColor="@Color.Primary" Icon="@Icons.Filled.Paid">
+                <MudNavLink Href="/admin/budgetjartemplates" IconColor="@Color.Primary" Icon="@Icons.Filled.Paid">
                     Budget Jars
                 </MudNavLink>
                 <MudNavLink Href="/admin/categories" IconColor="@Color.Primary" Icon="@Icons.Filled.Category">
