--- a/src/Web.WebApp/Shared/NavMenu.razor
+++ b/src/Web.WebApp/Shared/NavMenu.razor
@@ -10,8 +10,8 @@
                 <MudNavLink Href="/admin/budgetjartemplates" IconColor="@Color.Primary" Icon="@Icons.Filled.Paid">
                     Budget Jars
                 </MudNavLink>
-                <MudNavLink Href="/admin/categories" IconColor="@Color.Primary" Icon="@Icons.Filled.Category">
-                    Categories
+                <MudNavLink Href="/admin/expense-groups" IconColor="@Color.Primary" Icon="@Icons.Filled.Category">
+                    Expense Groups
                  </MudNavLink>
                 <MudNavLink Href="/admin/pageeditor/term" IconColor="@Color.Primary" Icon="@Icons.Filled.AssignmentTurnedIn">
                     Terms
