--- a/src/Web.WebApp/Shared/NavMenu.razor
+++ b/src/Web.WebApp/Shared/NavMenu.razor
@@ -12,7 +12,10 @@
                 </MudNavLink>
                 <MudNavLink Href="/admin/expense-groups" IconColor="@Color.Primary" Icon="@Icons.Filled.Category">
                     Expense Groups
-                 </MudNavLink>
+                </MudNavLink>
+                <MudNavLink Href="/admin/icon-management" IconColor="@Color.Primary" Icon="@Icons.Filled.Architecture">
+                    Icon Management
+                </MudNavLink>
                 <MudNavLink Href="/admin/pageeditor/term" IconColor="@Color.Primary" Icon="@Icons.Filled.AssignmentTurnedIn">
                     Terms
                 </MudNavLink>
